inserção de modificações

--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INSERIR TITULO AQUI</title>
+    <title>Document</title>
 </head>
-<body>
-    
-</body>
-<footer>
 
-</footer>
+<body>
+    <header>
+        <h1>Marissa Ann Mayer</h1>
+    </header>
+    <p>
+        É cofundadora da empresa de tecnologia Lumi Labs, negócio do campo de tecnologia formado pela empresária no
+        início de 2018. Ela também é conhecida por sua atuação no Google e no Yahoo, além disto é uma das profissionais
+        mais influentes do campo.</p>
+    <img src="/img/marissa_mayer_2.jpg" alt="Marissa Mayer segurando um microfone em talkshow." width="400"
+        height="300">
+    <p>Mayer incentivou e promoveu o uso de um sistema de classificação de desempenho de funcionários para acomodar
+        preconceitos subjetivos e opiniões pessoais da gerência, em detrimento dos funcionários do sexo masculino do
+        Yahoo!</p>
+    <h3>Alguns marcos do seu trabalho:</h3>
+    <ul>
+        <li>Mayer foi vice-presidente de Produtos de Pesquisa do Google e Experiência do Usuário até o final de 2010,
+            quando foi convidada pelo então CEO Eric Schmidt para chefiar os Serviços Locais, de Mapas e de Localização.
+        </li>
+        <br>
+        <li>Mayer lançou um novo programa online chamado PB&J. Coleta reclamações de funcionários, bem como seus votos
+            sobre problemas no escritório; se um problema gerar pelo menos 50 votos, o gerenciamento online
+            automaticamente investiga o assunto.</li>
+        <br>
+        <li>Mayer criou a Sunshine Contacts e afirma melhorar os contatos do iPhone dos usuários e os contatos do Google
+            usando
+            algoritmos inteligentes, dados de contato, fontes públicas e muito mais.</li>
+    </ul>
+    <footer>
+        <h3>Conheça mais sobre essa profissional tão influente aqui: <a
+                href="https://en.wikipedia.org/wiki/Marissa_Mayer" target="_blank">Clique aqui!</a></h3>
+    </footer>
+
+</body>
+
 </html>
